nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: default  # Adjust if your service is in a different namespace
spec:
  type: NodePort  # Expose the service via NodePort
  selector:
    app: myapp     # The label selector to match the pod(s)
  ports:
    - protocol: TCP
      port: 80      # The port on which the service will be exposed internally in the cluster
      targetPort: 5000  # The port where the app is running inside the pod
      nodePort: 30000  # The external port on each node to access the service
